[gd_scene load_steps=27 format=2]

[ext_resource path="res://dreadsitereuse/room_template/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://realthing.tres" type="TileSet" id=2]
[ext_resource path="res://locations/lecastlevania/Platforms.gd" type="Script" id=3]
[ext_resource path="res://water_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://water_tm.gd" type="Script" id=5]
[ext_resource path="res://locations/lecastlevania/SnakeGrabber.gd" type="Script" id=6]
[ext_resource path="res://locations/gate of cage/bossroom.gd" type="Script" id=7]
[ext_resource path="res://bullets/battle_network_snake.tscn" type="PackedScene" id=8]
[ext_resource path="res://wpnsys/hurt_stuff/Gun.gd" type="Script" id=9]
[ext_resource path="res://wpnsys/hurt_stuff/darkpistolresourcepacker.gd" type="Script" id=10]
[ext_resource path="res://wpnsys/hurt_stuff/commongundata.gd" type="Script" id=11]
[ext_resource path="res://raw_sprites/bisexualgun.png" type="Texture" id=12]
[ext_resource path="res://scenes/enemies/boss5/snake.tscn" type="PackedScene" id=13]
[ext_resource path="res://locations/gate of cage/boss_spawner.gd" type="Script" id=14]
[ext_resource path="res://scenes/sd_panel/sillyghampterspr.tscn" type="PackedScene" id=15]
[ext_resource path="res://rope.png" type="Texture" id=16]
[ext_resource path="res://scenes/sd_panel/sillyghampterspr.gd" type="Script" id=17]
[ext_resource path="res://scenes/boss_door/BossDoor2.tscn" type="PackedScene" id=18]
[ext_resource path="res://dreadsitereuse/room_transition_trigger.gd" type="Script" id=19]

[sub_resource type="Resource" id=85]
script = ExtResource( 11 )
gun_name = ""
gun_desc = ""
gun_fire_mode = 1
fires_before_charging = false
pellet_count = 1
burst_count = 1
cooldown = 0.6
max_charge = 0.0
spread = 0.0
recoil = 0.0
rotation_recoil = 0.0
damage = 1
speed = 400
bullet_lifetime = 2.0
no_cooldown = true

[sub_resource type="Resource" id=86]
script = ExtResource( 10 )
data_res = SubResource( 85 )
bullet = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=87]
extents = Vector2( 208, 128 )

[sub_resource type="RectangleShape2D" id=88]
extents = Vector2( 7.5, 114 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 240, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 240, 8 )

[sub_resource type="Animation" id=89]
resource_name = "carcrash"
length = 2.614
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "byebye"
} ]
}

[node name="A" instance=ExtResource( 1 )]
script = ExtResource( 7 )
__meta__ = {
"_edit_vertical_guides_": [ -96.0 ]
}
room_area = 6

[node name="gun" type="Node2D" parent="." index="0"]
unique_name_in_owner = true
visible = false
script = ExtResource( 9 )
_gun_data = SubResource( 86 )
is_enemy = true

[node name="SpriteSheet" type="Sprite" parent="gun" index="0"]
texture = ExtResource( 12 )

[node name="Position2D" type="Position2D" parent="gun" index="1"]
position = Vector2( 0, 32 )

[node name="Cooldown" type="Timer" parent="gun" index="2"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="gun" index="3"]

[node name="Node" type="Node" parent="gun" index="4"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="gun" index="5"]

[node name="Platforms" type="TileMap" parent="." index="1"]
unique_name_in_owner = true
position = Vector2( 0, 272 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 524288
collision_mask = 0
format = 1
tile_data = PoolIntArray( -6684672, 14, 0, -6684671, 14, 65536, -6684670, 14, 65536, -6684669, 14, 65536, -6684668, 14, 65536, -6684667, 14, 131072, -6684666, 14, 65536, -6684665, 14, 65536, -6684664, 14, 65536, -6684663, 14, 65536, -6684662, 14, 0, -6684661, 14, 0, -6684660, 14, 0, -6684659, 14, 0, -6684658, 14, 0, -6684657, 14, 0, -6684656, 14, 0, -6684655, 14, 0, -6684654, 14, 0, -6684653, 14, 0, -6684652, 14, 65536, -6684651, 14, 65536, -6684650, 14, 65536, -6684649, 14, 65536, -6684648, 14, 131072, -6684647, 14, 65536, -6684646, 14, 65536, -6684645, 14, 65536, -6684644, 14, 65536, -6684643, 14, 0, -5570560, 14, 0, -5570559, 14, 0, -5570558, 14, 0, -5570557, 14, 0, -5570556, 14, 0, -5570555, 14, 65536, -5570554, 14, 65536, -5570553, 14, 65536, -5570552, 14, 131072, -5570551, 14, 131072, -5570550, 14, 65536, -5570549, 14, 65536, -5570548, 14, 65536, -5570547, 14, 0, -5570546, 14, 0, -5570545, 14, 0, -5570544, 14, 0, -5570543, 14, 65536, -5570542, 14, 65536, -5570541, 14, 65536, -5570540, 14, 131072, -5570539, 14, 131072, -5570538, 14, 65536, -5570537, 14, 65536, -5570536, 14, 65536, -5570535, 14, 0, -5570534, 14, 0, -5570533, 14, 0, -5570532, 14, 0, -5570531, 14, 0, -4456448, 14, 0, -4456447, 14, 0, -4456446, 14, 0, -4456445, 14, 0, -4456444, 14, 0, -4456443, 14, 65536, -4456442, 14, 65536, -4456441, 14, 65536, -4456440, 14, 65536, -4456439, 14, 0, -4456438, 14, 0, -4456437, 14, 0, -4456436, 14, 0, -4456435, 14, 0, -4456434, 14, 0, -4456433, 14, 0, -4456432, 14, 0, -4456431, 14, 0, -4456430, 14, 0, -4456429, 14, 0, -4456428, 14, 0, -4456427, 14, 65536, -4456426, 14, 65536, -4456425, 14, 65536, -4456424, 14, 65536, -4456423, 14, 0, -4456422, 14, 0, -4456421, 14, 0, -4456420, 14, 0, -4456419, 14, 0, -3342336, 14, 0, -3342335, 14, 65536, -3342334, 14, 65536, -3342333, 14, 65536, -3342332, 14, 65536, -3342331, 14, 0, -3342330, 14, 0, -3342329, 14, 0, -3342328, 14, 0, -3342327, 14, 0, -3342326, 14, 0, -3342325, 14, 0, -3342324, 14, 0, -3342323, 14, 0, -3342322, 14, 0, -3342321, 14, 0, -3342320, 14, 0, -3342319, 14, 0, -3342318, 14, 0, -3342317, 14, 0, -3342316, 14, 0, -3342315, 14, 0, -3342314, 14, 0, -3342313, 14, 0, -3342312, 14, 0, -3342311, 14, 65536, -3342310, 14, 65536, -3342309, 14, 65536, -3342308, 14, 65536, -3342307, 14, 0, -2228224, 14, 0, -2228223, 14, 0, -2228222, 14, 0, -2228221, 14, 0, -2228220, 14, 0, -2228219, 14, 0, -2228218, 14, 0, -2228217, 14, 0, -2228216, 14, 0, -2228215, 14, 65536, -2228214, 14, 65536, -2228213, 14, 65536, -2228212, 14, 65536, -2228211, 14, 0, -2228210, 14, 0, -2228209, 14, 0, -2228208, 14, 0, -2228207, 14, 65536, -2228206, 14, 65536, -2228205, 14, 65536, -2228204, 14, 65536, -2228203, 14, 0, -2228202, 14, 0, -2228201, 14, 0, -2228200, 14, 0, -2228199, 14, 0, -2228198, 14, 0, -2228197, 14, 0, -2228196, 14, 0, -2228195, 14, 0, -1114112, 14, 0, -1114111, 14, 65536, -1114110, 14, 65536, -1114109, 14, 65536, -1114108, 14, 65536, -1114107, 14, 0, -1114106, 14, 0, -1114105, 14, 0, -1114104, 14, 0, -1114103, 14, 65536, -1114102, 14, 65536, -1114101, 14, 65536, -1114100, 14, 65536, -1114099, 14, 0, -1114098, 14, 0, -1114097, 14, 0, -1114096, 14, 0, -1114095, 14, 65536, -1114094, 14, 65536, -1114093, 14, 65536, -1114092, 14, 65536, -1114091, 14, 0, -1114090, 14, 0, -1114089, 14, 0, -1114088, 14, 0, -1114087, 14, 65536, -1114086, 14, 65536, -1114085, 14, 65536, -1114084, 14, 65536, -1114083, 14, 0, 0, 14, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 14, 0, 15, 14, 0, 16, 14, 0, 17, 14, 0, 18, 14, 0, 19, 14, 0, 20, 14, 0, 21, 14, 0, 22, 14, 0, 23, 14, 0, 24, 14, 0, 25, 14, 0, 26, 14, 0, 27, 14, 0, 28, 14, 0, 29, 14, 0 )
script = ExtResource( 3 )

[node name="RoomRect" parent="." index="2"]
margin_bottom = 336.0

[node name="TileMap" parent="." index="3"]
tile_data = PoolIntArray( 0, 16, 0, 29, 12, 65536, 1114125, 16, 0, 1114126, 16, 0, 1114127, 16, 0, 1114128, 16, 0 )

[node name="EnemySpawner" type="Position2D" parent="RoomObjectManager" index="0"]
position = Vector2( 240, 234 )
script = ExtResource( 14 )
enemy = ExtResource( 13 )
bossn = "bio-snake"
spawn_regardless = true

[node name="Area2D" type="Area2D" parent="RoomObjectManager/EnemySpawner" index="0"]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomObjectManager/EnemySpawner/Area2D" index="0"]
position = Vector2( 0, -90 )
shape = SubResource( 87 )

[node name="right" type="CollisionShape2D" parent="Transitions" index="0"]
modulate = Color( 1, 0.466667, 0.658824, 1 )
position = Vector2( 472, 163 )
shape = SubResource( 88 )
script = ExtResource( 19 )
normal_to_ignore = Vector2( -1, 0 )

[node name="left" type="CollisionShape2D" parent="Transitions" index="1"]
modulate = Color( 1, 0.466667, 0.658824, 1 )
position = Vector2( 8, 163 )
shape = SubResource( 88 )
script = ExtResource( 19 )
normal_to_ignore = Vector2( -1, 0 )

[node name="WaterTileMap" type="TileMap" parent="." index="8"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 64
collision_mask = 64
format = 1
tile_data = PoolIntArray( 1572864, 1, 0, 1572865, 1, 0, 1572866, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572879, 1, 0, 1572880, 1, 0, 1572881, 1, 0, 1572882, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1638400, 1, 0, 1638401, 1, 0, 1638402, 1, 0, 1638403, 1, 0, 1638404, 1, 0, 1638405, 1, 0, 1638406, 1, 0, 1638407, 1, 0, 1638408, 1, 0, 1638409, 1, 0, 1638410, 1, 0, 1638411, 1, 0, 1638412, 1, 0, 1638413, 1, 0, 1638414, 1, 0, 1638415, 1, 0, 1638416, 1, 0, 1638417, 1, 0, 1638418, 1, 0, 1638419, 1, 0, 1638420, 1, 0, 1638421, 1, 0, 1638422, 1, 0, 1638423, 1, 0, 1638424, 1, 0, 1638425, 1, 0, 1638426, 1, 0, 1638427, 1, 0, 1638428, 1, 0, 1638429, 1, 0, 1703936, 1, 0, 1703937, 1, 0, 1703938, 1, 0, 1703939, 1, 0, 1703940, 1, 0, 1703941, 1, 0, 1703942, 1, 0, 1703943, 1, 0, 1703944, 1, 0, 1703945, 1, 0, 1703946, 1, 0, 1703947, 1, 0, 1703948, 1, 0, 1703949, 1, 0, 1703950, 1, 0, 1703951, 1, 0, 1703952, 1, 0, 1703953, 1, 0, 1703954, 1, 0, 1703955, 1, 0, 1703956, 1, 0, 1703957, 1, 0, 1703958, 1, 0, 1703959, 1, 0, 1703960, 1, 0, 1703961, 1, 0, 1703962, 1, 0, 1703963, 1, 0, 1703964, 1, 0, 1703965, 1, 0 )
script = ExtResource( 5 )
position_to_eject_to = Vector2( 240, 252 )
hurts_regardless = true

[node name="SnakeGrabber" type="Area2D" parent="." index="9"]
z_index = 2
collision_layer = 4096
collision_mask = 4096
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnakeGrabber" index="0"]
position = Vector2( 240, -215 )
shape = SubResource( 2 )

[node name="SnakeTimer" type="Timer" parent="SnakeGrabber" index="1"]
wait_time = 1.5
one_shot = true

[node name="ViewOnlyTm" type="TileMap" parent="." index="10"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 1, 16, 0, 2, 16, 0, 3, 16, 0, 4, 16, 0, 5, 16, 0, 6, 16, 0, 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 20, 16, 0, 21, 16, 0, 22, 16, 0, 23, 16, 0, 24, 16, 0, 25, 16, 0, 26, 16, 0, 27, 16, 0, 28, 16, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="11"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( 240, 8 )
rotation = 3.14159
shape = SubResource( 3 )
one_way_collision = true

[node name="Line2D" type="Line2D" parent="." index="12"]
visible = false
position = Vector2( 240, 80 )
points = PoolVector2Array( 0, -64, 0, 38 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 16 )
texture_mode = 1

[node name="Node2D2" parent="." index="13" instance=ExtResource( 15 )]
visible = false
position = Vector2( 240, 128 )
rotation = 0.0
script = ExtResource( 17 )

[node name="Left" parent="Node2D2" index="1"]
position = Vector2( -2, -12 )

[node name="Right" parent="Node2D2" index="2"]
position = Vector2( 9, -16 )

[node name="Rope" type="Sprite" parent="Node2D2" index="3"]
position = Vector2( -1, -10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( 0, 0, 10, 4 )

[node name="BossDoor3" parent="." index="14" instance=ExtResource( 18 )]
position = Vector2( 472, 16 )
can_move = false
initial_door_size_y = 256
closed = false
br_no_open = true

[node name="BossDoor4" parent="." index="15" instance=ExtResource( 18 )]
position = Vector2( 8, 16 )
can_move = false
initial_door_size_y = 256
closed = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="16"]
playback_speed = 0.5
anims/carcrash = SubResource( 89 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="17"]
layer = 5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" index="0"]
visible = false
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TileMap2" type="TileMap" parent="." index="18"]
modulate = Color( 0.313726, 0.313726, 0.313726, 1 )
z_index = -5
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 16, 0, 1, 16, 0, 2, 16, 0, 3, 16, 0, 4, 16, 0, 5, 16, 0, 6, 16, 0, 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 20, 16, 0, 21, 16, 0, 22, 16, 0, 23, 16, 0, 24, 16, 0, 25, 16, 0, 26, 16, 0, 27, 16, 0, 28, 16, 0, 29, 12, 65536, 65536, 16, 0, 65537, 16, 0, 65538, 16, 0, 65539, 16, 0, 65540, 16, 0, 65541, 16, 0, 65542, 16, 0, 65543, 16, 0, 65544, 16, 0, 65545, 16, 0, 65546, 16, 0, 65547, 16, 0, 65548, 16, 0, 65549, 16, 0, 65550, 16, 0, 65551, 16, 0, 65552, 16, 0, 65553, 16, 0, 65554, 16, 0, 65555, 16, 0, 65556, 16, 0, 65557, 16, 0, 65558, 16, 0, 65559, 16, 0, 65560, 16, 0, 65561, 16, 0, 65562, 16, 0, 65563, 16, 0, 65564, 16, 0, 65565, 16, 0, 131072, 16, 0, 131073, 16, 0, 131074, 16, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 16, 0, 131085, 16, 0, 131086, 16, 0, 131087, 16, 0, 131088, 16, 0, 131089, 16, 0, 131090, 16, 0, 131091, 16, 0, 131092, 16, 0, 131093, 16, 0, 131094, 16, 0, 131095, 16, 0, 131096, 16, 0, 131097, 16, 0, 131098, 16, 0, 131099, 16, 0, 131100, 16, 0, 131101, 16, 0, 196608, 16, 0, 196609, 16, 0, 196610, 16, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 16, 0, 196619, 16, 0, 196620, 16, 0, 196621, 16, 0, 196622, 16, 0, 196623, 16, 0, 196624, 16, 0, 196625, 16, 0, 196626, 16, 0, 196627, 16, 0, 196628, 16, 0, 196629, 16, 0, 196630, 16, 0, 196631, 16, 0, 196632, 16, 0, 196633, 16, 0, 196634, 16, 0, 196635, 16, 0, 196636, 16, 0, 196637, 16, 0, 262144, 16, 0, 262145, 16, 0, 262146, 16, 0, 262147, 16, 0, 262148, 16, 0, 262149, 16, 0, 262150, 16, 0, 262151, 16, 0, 262152, 16, 0, 262153, 16, 0, 262154, 16, 0, 262155, 16, 0, 262156, 16, 0, 262157, 16, 0, 262158, 16, 0, 262159, 16, 0, 262160, 16, 0, 262161, 16, 0, 262162, 16, 0, 262163, 16, 0, 262164, 16, 0, 262165, 16, 0, 262166, 16, 0, 262167, 16, 0, 262168, 16, 0, 262169, 16, 0, 262170, 16, 0, 262171, 16, 0, 262172, 16, 0, 262173, 16, 0, 327680, 16, 0, 327681, 16, 0, 327682, 16, 0, 327683, 16, 0, 327684, 16, 0, 327685, 16, 0, 327686, 16, 0, 327687, 16, 0, 327688, 16, 0, 327689, 16, 0, 327690, 16, 0, 327691, 16, 0, 327692, 16, 0, 327693, 16, 0, 327694, 16, 0, 327695, 16, 0, 327696, 16, 0, 327697, 16, 0, 327698, 16, 0, 327699, 16, 0, 327700, 16, 0, 327701, 16, 0, 327702, 16, 0, 327703, 16, 0, 327704, 16, 0, 327705, 16, 0, 327706, 16, 0, 327707, 16, 0, 327708, 16, 0, 327709, 16, 0, 393216, 16, 0, 393217, 16, 0, 393218, 16, 0, 393219, 16, 0, 393220, 16, 0, 393221, 16, 0, 393222, 16, 0, 393223, 16, 0, 393224, 16, 0, 393225, 16, 0, 393226, 16, 0, 393227, 16, 0, 393228, 16, 0, 393229, 16, 0, 393230, 16, 0, 393231, 16, 0, 393232, 16, 0, 393233, 16, 0, 393234, 16, 0, 393235, 16, 0, 393236, 16, 0, 393237, 16, 0, 393238, 16, 0, 393239, 16, 0, 393240, 16, 0, 393241, 16, 0, 393242, 16, 0, 393243, 16, 0, 393244, 16, 0, 393245, 16, 0, 458752, 16, 0, 458753, 16, 0, 458754, 16, 0, 458755, 16, 0, 458756, 16, 0, 458757, 16, 0, 458758, 16, 0, 458759, 16, 0, 458760, 16, 0, 458761, 16, 0, 458762, 16, 0, 458763, 16, 0, 458764, 16, 0, 458765, 16, 0, 458766, 16, 0, 458767, 16, 0, 458768, 16, 0, 458769, 16, 0, 458770, 16, 0, 458771, 16, 0, 458772, 16, 0, 458773, 16, 0, 458774, 16, 0, 458775, 16, 0, 458776, 16, 0, 458777, 16, 0, 458778, 16, 0, 458779, 16, 0, 458780, 16, 0, 458781, 16, 0, 524288, 16, 0, 524289, 16, 0, 524290, 16, 0, 524291, 16, 0, 524292, 16, 0, 524293, 16, 0, 524294, 16, 0, 524295, 16, 0, 524296, 16, 0, 524297, 16, 0, 524298, 16, 0, 524299, 16, 0, 524300, 16, 0, 524301, 16, 0, 524302, 16, 0, 524303, 16, 0, 524304, 16, 0, 524305, 16, 0, 524306, 16, 0, 524307, 16, 0, 524308, 16, 0, 524309, 16, 0, 524310, 16, 0, 524311, 16, 0, 524312, 16, 0, 524313, 16, 0, 524314, 16, 0, 524315, 16, 0, 524316, 16, 0, 524317, 16, 0, 589824, 16, 0, 589825, 16, 0, 589826, 16, 0, 589827, 16, 0, 589828, 16, 0, 589829, 16, 0, 589830, 16, 0, 589831, 16, 0, 589832, 16, 0, 589833, 16, 0, 589834, 16, 0, 589835, 16, 0, 589836, 16, 0, 589837, 16, 0, 589838, 16, 0, 589839, 16, 0, 589840, 16, 0, 589841, 16, 0, 589842, 16, 0, 589843, 16, 0, 589844, 16, 0, 589845, 16, 0, 589846, 16, 0, 589847, 16, 0, 589848, 16, 0, 589849, 16, 0, 589850, 16, 0, 589851, 16, 0, 589852, 16, 0, 589853, 16, 0, 655360, 16, 0, 655361, 16, 0, 655362, 16, 0, 655363, 16, 0, 655364, 16, 0, 655365, 16, 0, 655366, 16, 0, 655367, 16, 0, 655368, 16, 0, 655369, 16, 0, 655370, 16, 0, 655371, 16, 0, 655372, 16, 0, 655373, 16, 0, 655374, 16, 0, 655375, 16, 0, 655376, 16, 0, 655377, 16, 0, 655378, 16, 0, 655379, 16, 0, 655380, 16, 0, 655381, 16, 0, 655382, 16, 0, 655383, 16, 0, 655384, 16, 0, 655385, 16, 0, 655386, 16, 0, 655387, 16, 0, 655388, 16, 0, 655389, 16, 0, 720896, 16, 0, 720897, 16, 0, 720898, 16, 0, 720899, 16, 0, 720900, 16, 0, 720901, 16, 0, 720902, 16, 0, 720903, 16, 0, 720904, 16, 0, 720905, 16, 0, 720906, 16, 0, 720907, 16, 0, 720908, 16, 0, 720909, 16, 0, 720910, 16, 0, 720911, 16, 0, 720912, 16, 0, 720913, 16, 0, 720914, 16, 0, 720915, 16, 0, 720916, 16, 0, 720917, 16, 0, 720918, 16, 0, 720919, 16, 0, 720920, 16, 0, 720921, 16, 0, 720922, 16, 0, 720923, 16, 0, 720924, 16, 0, 720925, 16, 0, 786432, 16, 0, 786433, 16, 0, 786434, 16, 0, 786435, 16, 0, 786436, 16, 0, 786437, 16, 0, 786438, 16, 0, 786439, 16, 0, 786440, 16, 0, 786441, 16, 0, 786442, 16, 0, 786443, 16, 0, 786444, 16, 0, 786445, 16, 0, 786446, 16, 0, 786447, 16, 0, 786448, 16, 0, 786449, 16, 0, 786450, 16, 0, 786451, 16, 0, 786452, 16, 0, 786453, 16, 0, 786454, 16, 0, 786455, 16, 0, 786456, 16, 0, 786457, 16, 0, 786458, 16, 0, 786459, 16, 0, 786460, 16, 0, 786461, 16, 0, 851968, 16, 0, 851969, 16, 0, 851970, 16, 0, 851971, 16, 0, 851972, 16, 0, 851973, 16, 0, 851974, 16, 0, 851975, 16, 0, 851976, 16, 0, 851977, 16, 0, 851978, 16, 0, 851979, 16, 0, 851980, 16, 0, 851981, 16, 0, 851982, 16, 0, 851983, 16, 0, 851984, 16, 0, 851985, 16, 0, 851986, 16, 0, 851987, 16, 0, 851988, 16, 0, 851989, 16, 0, 851990, 16, 0, 851991, 16, 0, 851992, 16, 0, 851993, 16, 0, 851994, 16, 0, 851995, 16, 0, 851996, 16, 0, 851997, 16, 0, 917504, 16, 0, 917505, 16, 0, 917506, 16, 0, 917507, 16, 0, 917508, 16, 0, 917509, 16, 0, 917510, 16, 0, 917511, 16, 0, 917512, 16, 0, 917513, 16, 0, 917514, 16, 0, 917515, 16, 0, 917516, 16, 0, 917517, 16, 0, 917518, 16, 0, 917519, 16, 0, 917520, 16, 0, 917521, 16, 0, 917522, 16, 0, 917523, 16, 0, 917524, 16, 0, 917525, 16, 0, 917526, 16, 0, 917527, 16, 0, 917528, 16, 0, 917529, 16, 0, 917530, 16, 0, 917531, 16, 0, 917532, 16, 0, 917533, 16, 0, 983040, 16, 0, 983041, 16, 0, 983042, 16, 0, 983043, 16, 0, 983044, 16, 0, 983045, 16, 0, 983046, 16, 0, 983047, 16, 0, 983048, 16, 0, 983049, 16, 0, 983050, 16, 0, 983051, 16, 0, 983052, 16, 0, 983053, 16, 0, 983054, 16, 0, 983055, 16, 0, 983056, 16, 0, 983057, 16, 0, 983058, 16, 0, 983059, 16, 0, 983060, 16, 0, 983061, 16, 0, 983062, 16, 0, 983063, 16, 0, 983064, 16, 0, 983065, 16, 0, 983066, 16, 0, 983067, 16, 0, 983068, 16, 0, 983069, 16, 0, 1048576, 16, 0, 1048577, 16, 0, 1048578, 16, 0, 1048579, 16, 0, 1048580, 16, 0, 1048581, 16, 0, 1048582, 16, 0, 1048583, 16, 0, 1048584, 16, 0, 1048585, 16, 0, 1048586, 16, 0, 1048587, 16, 0, 1048588, 16, 0, 1048589, 16, 0, 1048590, 16, 0, 1048591, 16, 0, 1048592, 16, 0, 1048593, 16, 0, 1048594, 16, 0, 1048595, 16, 0, 1048596, 16, 0, 1048597, 16, 0, 1048598, 16, 0, 1048599, 16, 0, 1048600, 16, 0, 1048601, 16, 0, 1048602, 16, 0, 1048603, 16, 0, 1048604, 16, 0, 1048605, 16, 0, 1114112, 16, 0, 1114113, 16, 0, 1114114, 16, 0, 1114115, 16, 0, 1114116, 16, 0, 1114117, 16, 0, 1114118, 16, 0, 1114119, 16, 0, 1114120, 16, 0, 1114121, 16, 0, 1114122, 16, 0, 1114123, 16, 0, 1114124, 16, 0, 1114125, 16, 0, 1114126, 16, 0, 1114127, 16, 0, 1114128, 16, 0, 1114129, 16, 0, 1114130, 16, 0, 1114131, 16, 0, 1114132, 16, 0, 1114133, 16, 0, 1114134, 16, 0, 1114135, 16, 0, 1114136, 16, 0, 1114137, 16, 0, 1114138, 16, 0, 1114139, 16, 0, 1114140, 16, 0, 1114141, 16, 0, 1179648, 16, 0, 1179649, 16, 0, 1179650, 16, 0, 1179651, 16, 0, 1179652, 16, 0, 1179653, 16, 0, 1179654, 16, 0, 1179655, 16, 0, 1179656, 16, 0, 1179657, 16, 0, 1179658, 16, 0, 1179659, 16, 0, 1179660, 16, 0, 1179661, 16, 0, 1179662, 16, 0, 1179663, 16, 0, 1179664, 16, 0, 1179665, 16, 0, 1179666, 16, 0, 1179667, 16, 0, 1179668, 16, 0, 1179669, 16, 0, 1179670, 16, 0, 1179671, 16, 0, 1179672, 16, 0, 1179673, 16, 0, 1179674, 16, 0, 1179675, 16, 0, 1179676, 16, 0, 1179677, 16, 0, 1245184, 16, 0, 1245185, 16, 0, 1245186, 16, 0, 1245187, 16, 0, 1245188, 16, 0, 1245189, 16, 0, 1245190, 16, 0, 1245191, 16, 0, 1245192, 16, 0, 1245193, 16, 0, 1245194, 16, 0, 1245195, 16, 0, 1245196, 16, 0, 1245197, 16, 0, 1245198, 16, 0, 1245199, 16, 0, 1245200, 16, 0, 1245201, 16, 0, 1245202, 16, 0, 1245203, 16, 0, 1245204, 16, 0, 1245205, 16, 0, 1245206, 16, 0, 1245207, 16, 0, 1245208, 16, 0, 1245209, 16, 0, 1245210, 16, 0, 1245211, 16, 0, 1245212, 16, 0, 1245213, 16, 0, 1310720, 16, 0, 1310721, 16, 0, 1310722, 16, 0, 1310723, 16, 0, 1310724, 16, 0, 1310725, 16, 0, 1310726, 16, 0, 1310727, 16, 0, 1310728, 16, 0, 1310729, 16, 0, 1310730, 16, 0, 1310731, 16, 0, 1310732, 16, 0, 1310733, 16, 0, 1310734, 16, 0, 1310735, 16, 0, 1310736, 16, 0, 1310737, 16, 0, 1310738, 16, 0, 1310739, 16, 0, 1310740, 16, 0, 1310741, 16, 0, 1310742, 16, 0, 1310743, 16, 0, 1310744, 16, 0, 1310745, 16, 0, 1310746, 16, 0, 1310747, 16, 0, 1310748, 16, 0, 1310749, 16, 0 )

[connection signal="proj_created" from="gun" to="SnakeGrabber" method="_on_gun_proj_created"]
[connection signal="body_entered" from="RoomObjectManager/EnemySpawner/Area2D" to="RoomObjectManager/EnemySpawner" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="SnakeGrabber" to="SnakeGrabber" method="_on_SnakeGrabber_body_entered"]
[connection signal="timeout" from="SnakeGrabber/SnakeTimer" to="SnakeGrabber" method="_on_SnakeTimer_timeout"]

[editable path="Node2D2"]
